--- a/app/flaskr/templates/show_entries.html
+++ b/app/flaskr/templates/show_entries.html
@@ -1,4 +1,4 @@
-{% extends "layyout.html" %}
+{% extends "layout.html" %}
 {% block body %}
   {% if session.logged_in %}
     <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
