--- a/app/flaskr/templates/layout.html
+++ b/app/flaskr/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Flaskr</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap.min.css') }}">
 <div class=page>
   <h1>Flaskr</h1>
   <div class=metanav>
